20160721:
	* main.c/mmgui.c: added functions to dump the filename in hex for debug.
	* icons: updated some 64x64 icons.
	* IUP: moved to 3.19.1
	* mmgui_message_popup(): adapte to the size of the system font.

20160720: release 2.0
	* iup/iup_list.c: The Temporary patch can be removed. In iListGetNaturalItemsSize():846:
	  *h += 2*ih->data->spacing;  /* this will be multiplied by the number of lines */
	  *w += 2*ih->data->spacing;  /* include also horizontal spacing */
	changed to
	  /* 20140505 A.Xuming: Temporary solution to go around the IupList too short issue */
	  *h += 2*ih->data->spacing + 1;  /* this will be multiplied by the number of lines */
	  *w += 2*ih->data->spacing;  /* include also horizontal spacing */
	to workaround the IupList can not go to the bottom items. It seems
	fixed above 3.10

20160717:
	* rename.c: remove the overwrite option totally.
	You don't want anything being accidently overwritten by a rename tool.
	If you want, you need to use other tools. Rename tool is not 'mv'
	or 'cp'. It does simply change filenames. If the target file is
	already existed, renamex simply gives up.

20160715:
	* TODO: normalize the size of the right panel
	* TODO: charset test plan needed in Windows

20160713:
	* main.c: fixed the argument problem when loading names from a file
	* autotest.sh: basic form workable.

20160710: move to 2.0
	* rename: the whole project will be based on IUP and libcsoup
	to support the Win32 and Linux/Unix with both GUI and CLI.

20110320: v1.99.2
	* baseline version released

20110312: v1.99.1
	* almost rewrote the whole thing
	* copyright license update to GPL v3
	* primary site moved to sourceforge.net

20110309: reopen the rename programming

May 6th, 2002 Xuming <xuming@bigfoot.com>
	version 1.2 fix the bug of strncpy() by Joerg Desch's patch 
	<jd@voelker-web.de>, which doesn't end strings with '\0'

Aug 29th, 2001 Xuming <xuming@iname.com>
	version 1.1
	