@@ -59,8 +59,9 @@
 #include <string.h>
 #include <stdarg.h>
 
-#define CSOUP_DEBUG_LOCAL	SLOG_CWORD(CSOUP_MOD_CONFIG, SLOG_LVL_ERROR)
 #include "libcsoup.h"
+
+#define CSOUP_DEBUG_LOCAL	SLOG_CWORD(CSOUP_MOD_CONFIG, SLOG_LVL_ERROR)
 #include "libcsoup_debug.h"
 
 #define	CFGF_BLOCK_WID		36
