@@ -1,3 +1,6 @@
+20160726:
+	* libcsoup: updated to 0.9.2 to re-use the debug functions.
+
 20160721:
 	* main.c/mmgui.c: added functions to dump the filename in hex for debug.
 	* icons: updated some 64x64 icons.
